auction-common/src/main/kotlin/org/example/common/global/error/ErrorCode.kt
package org.example.common.global.error

interface ErrorCode {
    val code: String
    val message: String
}